<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/secondActivityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="secondActivityBtnListener"
        android:text="@string/second_activity" />

    <Button
        android:id="@+id/googleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="googleBtnListener"
        android:text="@string/google" />

    <Button
        android:id="@+id/mapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="mapBtnListener"
        android:text="@string/map" />

    <Button
        android:id="@+id/phoneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="phoneBtnListener"
        android:text="@string/phone" />

    <Button
        android:id="@+id/computeDelta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="computeDeltaBtnListener"
        android:text="@string/compute_delta" />

</LinearLayout>